setups and stuff

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(255, 234, 237);
+}
+
+body:before {
+  content: ' ';
+  background-image: url('../images/logo.png');
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.1;
 }
 
 code {
